Creation of Dockerfile and docker-compose

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 USER_SYS=walterdf@gmail.com
 
 #Configuração do servidor SMTP para disparar os emails
-SMTP_ADDRESS=smtp.gmail.com
-SMTP_PORT=587
-SMTP_DOMAIN=gmail.com
-SMTP_USER_NAME=walterdf@gmail.com
-SMTP_PASSWORD=!Senha123
-SMTP_AUTHENTICATION=plain
+SMTP_ADDRESS=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_DOMAIN=smtp.mailtrap.io
+SMTP_USER_NAME=c01fb3f276437e
+SMTP_PASSWORD=093759cacdd450
+SMTP_AUTHENTICATION=cram_md5
 SMTP_ENABLE_STARTTLS_AUTO=true
